objects/SFDC_520_Quote__c.object
<CustomObject>
    <fields>
        <fullName>Implementation_Manager__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Opportunity__r.Implementation_Contact__r.Id,  Opportunity__r.Implementation_Contact__r.FirstName&amp;&quot; &quot;&amp; Opportunity__r.Implementation_Contact__r.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Notes__c</fullName>
        <description>The new field to hole We_Owe__c from Opportunity as you cannot use a Long Text Area in a formula Field.</description>
        <inlineHelpText>The new field to hole We_Owe__c from Opportunity as you cannot use a Long Text Area in a formula Field.</inlineHelpText>
        <label>Implementation Notes New</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Implementation_Strategy__c</fullName>
        <label>Implementation Strategy</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>In_House_Training_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>updated by the Travel Coordinator</inlineHelpText>
        <label>In House Training Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incidental_Expenses__c</fullName>
        <defaultValue>100.00</defaultValue>
        <inlineHelpText>Fixed at $100.</inlineHelpText>
        <label>Incidental Expenses</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Infrastructure_Requirements__c</fullName>
        <label>Infrastructure Requirements</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_CRM_ILM_Data_Audit_Complete__c</fullName>
        <label>Internal CRM/ILM Data Audit Completed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Project_Type__c</fullName>
        <label>Internal Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>Internal Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events/Events Collateral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Collateral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Collateral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Social Media</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internet_Access_Keys_Passwords_IP_add__c</fullName>
        <label>Internet Access Keys/Passwords/IP add</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Internet_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internet Access?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intro_Call_Assessment_Goal_Date__c</fullName>
        <formula>IF(TEXT(Alternate_Start_Date__c) != null, Alternate_Start_Date__c+3, DATEVALUE(CreatedDate)+3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-calculated by the system by taking the Project Created Date + 3 days.</inlineHelpText>
        <label>Intro Call &amp; Assessment Goal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intro_Call_Assessment_Sent_Status__c</fullName>
        <formula>IF((TEXT(Contact_Made__c)= NULL) &amp;&amp; (Intro_Call_Assessment_Goal_Date__c &lt; today()), 
&quot;Overdue&quot;, 

IF((TEXT(Contact_Made__c) = NULL) &amp;&amp; (Intro_Call_Assessment_Goal_Date__c &lt;= (today()+3)), 
&quot;Nearing Goal Date&quot;, 

IF((TEXT(Contact_Made__c) = NULL) &amp;&amp; (Intro_Call_Assessment_Goal_Date__c &gt; today()), 
&quot;Pending&quot;, 

IF(Contact_Made__c &lt;= Intro_Call_Assessment_Goal_Date__c, 
&quot;Goal Completed&quot;, 

IF(Contact_Made__c &gt; Intro_Call_Assessment_Goal_Date__c, 
&quot;Goal Missed&quot;,NULL 
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intro Call &amp; Assessment Sent Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intro_Call__c</fullName>
        <description>Haystak</description>
        <label>Intro Call</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intro_Sales_Processes_Template_Goal_Date__c</fullName>
        <formula>IF(TEXT(Alternate_Start_Date__c) != null, Alternate_Start_Date__c+29, DATEVALUE(CreatedDate)+29)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-calculated by the system by taking the Project Created Date + 29 days.</inlineHelpText>
        <label>Intro Sales Processes&amp;Template Goal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intro_Sales_Processes_Template_Status__c</fullName>
        <formula>IF((TEXT(Intro_to_Sales_Processes_Templates__c)= NULL) &amp;&amp; (Intro_Sales_Processes_Template_Goal_Date__c &lt; today()),
 &quot;Overdue&quot;,

IF((TEXT(Intro_to_Sales_Processes_Templates__c) = NULL) &amp;&amp; (Intro_Sales_Processes_Template_Goal_Date__c&lt;= (today()+3)), 
&quot;Nearing Goal Date&quot;,

IF((TEXT(Intro_to_Sales_Processes_Templates__c) = NULL) &amp;&amp; (Intro_Sales_Processes_Template_Goal_Date__c&gt; today()), 
&quot;Pending&quot;, 

IF(Intro_to_Sales_Processes_Templates__c&lt;= Intro_Sales_Processes_Template_Goal_Date__c, 
&quot;Goal Completed&quot;,

IF(Intro_to_Sales_Processes_Templates__c&gt; Intro_Sales_Processes_Template_Goal_Date__c, 
&quot;Goal Missed&quot;,NULL
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intro Sales Processes&amp;Template Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intro_To_Go_Live_Date__c</fullName>
        <description>For Reports only. Used to calculate number of days</description>
        <formula>End_Date__c  -  Date_Intro_Call_Complete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intro To Go Live Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Intro_To_Work_Complete__c</fullName>
        <description>Used for Reports to find the number of days</description>
        <formula>Project_Complete_Date__c  -  Date_Intro_Call_Complete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intro To Work Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Intro_to_Sales_Processes_Templates__c</fullName>
        <label>Intro to Sales Processes &amp; Templates</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Introduction_Call_Checklist__c</fullName>
        <formula>HYPERLINK(&quot;/servlet/servlet.FileDownload?file=01570000001UaNm&quot;, &quot;Click Here&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Introduction Call Checklist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Introduction_Goal_Date__c</fullName>
        <formula>IF(TEXT(Alternate_Start_Date__c) != null, Alternate_Start_Date__c+3, DATEVALUE(CreatedDate) +3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>auto calculated from the project created date + 3 days</inlineHelpText>
        <label>Introduction Goal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Introduction_Status__c</fullName>
        <formula>IF (RecordTypeId = &apos;01270000000Q5Z0&apos;, 
IF (TEXT(Attempted_Contact_Date__c) = NULL &amp;&amp; Introduction_Goal_Date__c &gt;= TODAY() , &quot;Pending Contact&quot;,
IF (TEXT(Attempted_Contact_Date__c) = NULL &amp;&amp; Introduction_Goal_Date__c &lt; TODAY(), &quot;Overdue Contact&quot;,
IF (TEXT(Attempted_Contact_Date__c) != NULL &amp;&amp; Attempted_Contact_Date__c &gt; Introduction_Goal_Date__c , &quot;Goal Missed&quot;,
IF (TEXT(Attempted_Contact_Date__c ) != NULL &amp;&amp; Introduction_Goal_Date__c &lt;= TODAY(), &quot;Goal Completed&quot;,
&quot;Not Started&quot; 
)))), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Introduction Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Introduction_to_Forms_Call__c</fullName>
        <label>Introduction to Forms Call Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inventory_Completed__c</fullName>
        <label>Inventory Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inventory_Feed_Provider__c</fullName>
        <description>Haystak</description>
        <label>Inventory Feed Provider</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Goal_Date__c</fullName>
        <formula>IF(TEXT(Alternate_Start_Date__c) != null, Alternate_Start_Date__c+30, DATEVALUE(CreatedDate)+30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-calculated by the system by taking the Project Created Date + 30 days.</inlineHelpText>
        <label>Inventory Verification Goal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inventory_Goal__c</fullName>
        <formula>Inventory_Completed__c-  DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>calculates the difference between the Inventory Goal Date and actual completed date</inlineHelpText>
        <label>Inventory Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventory_Module_Due_By_PPMS__c</fullName>
        <formula>TEXT(MONTH(Phase_3_Goal_Date__c)) &amp; &quot;/&quot; &amp; 
TEXT(DAY(Phase_3_Goal_Date__c)) &amp; &quot;/&quot; &amp; 
TEXT(YEAR(Phase_3_Goal_Date__c))</formula>
        <label>Inventory Module Due By PPMS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Status2__c</fullName>
        <formula>IF((TEXT(Inventory_Verified_Complete__c)= NULL) &amp;&amp; (Inventory_Goal_Date__c&lt; today()), 
&quot;Overdue&quot;,

IF((TEXT(Inventory_Verified_Complete__c) = NULL) &amp;&amp; (Inventory_Goal_Date__c&lt;= (today()+3)),
 &quot;Nearing Goal Date&quot;,

IF((TEXT(Inventory_Verified_Complete__c) = NULL) &amp;&amp; (Inventory_Goal_Date__c&gt; today()), 
&quot;Pending&quot;, 

IF(Inventory_Verified_Complete__c&lt;= Inventory_Goal_Date__c, 
&quot;Goal Completed&quot;,

IF(Inventory_Verified_Complete__c&gt; Inventory_Goal_Date__c, 
&quot;Goal Missed&quot;,NULL
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inventory Verification Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Status__c</fullName>
        <formula>IF((TEXT( Inventory_Completed__c )= NULL) &amp;&amp; (Phase_3_Goal_Date__c &lt; today()), &quot;Inventory Overdue&quot;, 
IF((TEXT( Inventory_Completed__c ) = NULL) &amp;&amp; (Phase_3_Goal_Date__c &lt;= (today()+3)), &quot;Nearing Inventory Goal Date&quot;, 
IF((TEXT(Inventory_Completed__c) = NULL) &amp;&amp; (Phase_3_Goal_Date__c &gt; today()), &quot;Pending Inventory&quot;, 
IF(Inventory_Completed__c &lt;= Phase_3_Goal_Date__c, &quot;Goal Completed&quot;, 
IF(Inventory_Completed__c &gt; Phase_3_Goal_Date__c, &quot;Goal Missed&quot;,&quot;Pending Contact&quot; 
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inventory Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Verification_Checklist__c</fullName>
        <formula>HYPERLINK(&quot;/servlet/servlet.FileDownload?file=01570000001UaNr&quot;, &quot;Click Here&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inventory Verification Checklist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Verified_Complete__c</fullName>
        <label>Inventory Verified/Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inventory_Verified_PPMS__c</fullName>
        <formula>IF(
   RecordTypeId = &quot;01270000000Q5Z0&quot;,
   IF(
      !ISBLANK(Inventory_Verified__c),
      &quot;Complete &quot; &amp; 
      IF(
         LEN(TEXT(MONTH(Inventory_Verified__c))) = 1,
         &quot;0&quot;,
         &quot;&quot;
      ) &amp;
      TEXT(MONTH(Inventory_Verified__c)) &amp; &quot;/&quot; &amp; 
      IF(
         LEN(TEXT(DAY(Inventory_Verified__c))) = 1,
         &quot;0&quot;,
         &quot;&quot;
      ) &amp;
      TEXT(DAY(Inventory_Verified__c)) &amp; &quot;/&quot; &amp; 
      TEXT(YEAR(Inventory_Verified__c)),
      &quot;&quot;
   ),
   &quot;N/A&quot;
)</formula>
        <label>Inventory Verified PPMS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Verified__c</fullName>
        <label>Inventory Verified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <description>Filled in by Accounting when the included products are invoiced</description>
        <label>Invoice Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <description>Filled in by Accounting when the contents of this project are invoiced.</description>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <inlineHelpText>Accounting logs the invoice number for a Project billed here. Required for Bill When Dealer Says Yes projects to fall out of the Accounting Queue View.</inlineHelpText>
        <label>Invoice Number</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kenshoo_Login_1__c</fullName>
        <description>Haystack Field Request</description>
        <label>Kenshoo Login 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kenshoo_Login_2__c</fullName>
        <description>Haystak Field Request</description>
        <label>Kenshoo Login 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kenshoo_Password_1__c</fullName>
        <description>Haystak Field Request</description>
        <label>Kenshoo Password 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kenshoo_Password_2__c</fullName>
        <description>Haystak Field Request</description>
        <label>Kenshoo Password 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kenshoo_Profile__c</fullName>
        <description>Haystak</description>
        <label>Kenshoo Profile #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kenshoo_Server__c</fullName>
        <label>Kenshoo Server</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kenshoo_Tracking_ID__c</fullName>
        <description>Haystak</description>
        <label>Kenshoo Tracking ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Constraints__c</fullName>
        <label>Key Constraints</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Kick_Off_Call_Completed__c</fullName>
        <label>Kick Off Call Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kick_Off_Call_Goal_Date__c</fullName>
        <formula>IF(TEXT(Alternate_Start_Date__c) != null, Alternate_Start_Date__c+7, DATEVALUE(CreatedDate)+7)</formula>
        <inlineHelpText>Auto-calculated by the system by taking the Project Created Date + 7 days.</inlineHelpText>
        <label>Kick Off Call Goal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kick_Off_Call_Status__c</fullName>
        <formula>IF((TEXT(Kick_Off_Call_Completed__c)= NULL) &amp;&amp; (Kick_Off_Call_Goal_Date__c &lt; today()), &quot;Overdue&quot;,
IF((TEXT(Kick_Off_Call_Completed__c) = NULL) &amp;&amp; (Kick_Off_Call_Goal_Date__c &lt;= (today()+3)), &quot;Nearing Goal Date&quot;,
IF((TEXT(Kick_Off_Call_Completed__c) = NULL) &amp;&amp; (Kick_Off_Call_Goal_Date__c &gt; today()), &quot;Pending&quot;,
IF(Kick_Off_Call_Completed__c &lt;= Kick_Off_Call_Goal_Date__c, &quot;Goal Completed&quot;,
IF(Kick_Off_Call_Completed__c &gt; Kick_Off_Call_Goal_Date__c, &quot;Goal Missed&quot;,NULL
)))))</formula>
        <label>Kick Off Call Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_CSR_Date__c</fullName>
        <inlineHelpText>used by our CSR Team to notate the last time they called on the Project</inlineHelpText>
        <label>Last CSR Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Version_of_IE_Downloaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Latest Version of IE Installed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Launch_Coordinator_Notes__c</fullName>
        <label>Launch Consultant Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Launch_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Launch Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Settings_Complete__c</fullName>
        <label>Lead Settings Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Settings_Goal_Date__c</fullName>
        <formula>IF(TEXT(Alternate_Start_Date__c) != null, Alternate_Start_Date__c+20, DATEVALUE(CreatedDate)+20)</formula>
        <inlineHelpText>auto-calculated by the system by taking the Project Created Date + 20 days</inlineHelpText>
        <label>Lead Settings Goal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Settings_Status__c</fullName>
        <formula>IF((TEXT(Lead_Settings_Complete__c)= NULL) &amp;&amp;                    (Lead_Settings_Goal_Date__c &lt; today()),
 &quot;Overdue&quot;,

IF((TEXT(Lead_Settings_Complete__c) = NULL) &amp;&amp; (Lead_Settings_Goal_Date__c &lt;= (today()+3)),
 &quot;Nearing Goal Date&quot;,

IF((TEXT(Lead_Settings_Complete__c) = NULL) &amp;&amp; (Lead_Settings_Goal_Date__c &gt; today()), 
&quot;Pending&quot;, 

IF(Lead_Settings_Complete__c &lt;= Lead_Settings_Goal_Date__c, &quot;Goal Completed&quot;,

IF(Lead_Settings_Complete__c &gt; Lead_Settings_Goal_Date__c, &quot;Goal Missed&quot;,NULL
)))))</formula>
        <label>Lead Settings Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <label>Legacy_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Graphics__c</fullName>
        <description>Used by Websites to provide a link to the graphics to be used.</description>
        <label>Link to Graphics</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Live_Site__c</fullName>
        <description>Used by Websites.</description>
        <label>Link to Live Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Proof_Site__c</fullName>
        <description>Used by Websites.</description>
        <label>Link to Proof Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MS10_PP_Inventory__c</fullName>
        <label>Vector File Uploaded PPMS</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS1_PP_FormMapping__c</fullName>
        <label>Forms Review PPMS</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS1_PP_ILM__c</fullName>
        <label>Process/Templates Copied PPMS</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS1_PP_Inventory__c</fullName>
        <label>Users Entered PPMS</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS1_PP_Survey__c</fullName>
        <label>Survey Enabled PPMS</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS2_PP_ILM__c</fullName>
        <label>Call Provider Set Up PPMS</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS2_PP_Launch__c</fullName>
        <label>Intro to User List Call PPMS</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS2_PP_eBayListings__c</fullName>
        <label>Set up Ebay and Post PPMS</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS3_PP_AIS_Desking__c</fullName>
        <label>AIS Desking Verified PPMS</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS3_PP_AIS_Site__c</fullName>
        <label>AIS Websites Verified PPMS</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS3_PP_Inventory__c</fullName>
        <label>Autocheck SID Set Up PPMS</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS3_PP_Launch__c</fullName>
        <label>User List/Lead Settings Call PPMS</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS4_PP_Launch__c</fullName>
        <label>Processes Templates Call PPMS</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS4_PP_TextMsgs__c</fullName>
        <label>Text Messaging Enabled PPMS</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS5_PP_DataAppend__c</fullName>
        <label>Data Append Enabled PPMS</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS5_PP_Desking__c</fullName>
        <label>DealerTrack RouteOne Set Up PPMS</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS6_PP_CRMImp__c</fullName>
        <label>Sold History Reports Loaded PPMS</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS6_PP_EmailBanner__c</fullName>
        <label>Email Banner Uploaded PPMS</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS6_PP_PBX__c</fullName>
        <label>PBX Set Up PPMS</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS6_PP_PhotoOverlay__c</fullName>
        <label>Photo Overlay Loaded PPMS</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS8_PP_CRMImp__c</fullName>
        <label>Service History Reports Loaded PPMS</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS8_PP_Desking__c</fullName>
        <label>Desking Enabled PPMS</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS9_PP_CRMImp__c</fullName>
        <label>Trade Appraisal Push PPMS</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS9_PP_Desking__c</fullName>
        <label>Credit Bureau Set Up PPMS</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS9_PP_ILM__c</fullName>
        <label>Lead Address Created PPMS</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make_Intro_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Make Intro Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manuals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manuals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marchex_ID__c</fullName>
        <description>Haystak</description>
        <label>Marchex ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mark_Checked__c</fullName>
        <description>Temporary field. Used by Mark to track projects that he has personally checked for Has Recurring Products.</description>
        <label>Mark Checked</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Media_Advertising_Consultant__c</fullName>
        <description>Haystak</description>
        <formula>Account__r.Media_Advertising_Consultant__c</formula>
        <label>Media Advertising Consultant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_District_Sales_Mgr__c</fullName>
        <description>Haystak</description>
        <formula>Account__r.Media_District_Sales_Mgr__c</formula>
        <label>Media District Sales Mgr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Product_Specialist__c</fullName>
        <description>Haystak</description>
        <formula>Account__r.Media_Product_Specialist__c</formula>
        <label>Media Product Specialist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merged_Training_Dates__c</fullName>
        <description>Used by merge fields in email templates</description>
        <formula>IF(
   ISBLANK(Proposed_Training_Start__c) &amp;&amp; ISBLANK(Proposed_Training_End__c) &amp;&amp; ISBLANK(Confirmed_Training_Start__c) &amp;&amp; ISBLANK(Confirmed_Training_End__c),
   &quot;Not set&quot;,
   IF(
      !ISBLANK(Confirmed_Training_Start__c) &amp;&amp; !ISBLANK(Confirmed_Training_End__c),
      TEXT(MONTH(Confirmed_Training_Start__c)) &amp; &quot;/&quot; &amp; TEXT(DAY(Confirmed_Training_Start__c)) &amp; &quot;/&quot; &amp; TEXT(YEAR(Confirmed_Training_Start__c)) &amp; &quot; - &quot; &amp; TEXT(MONTH(Confirmed_Training_End__c)) &amp; &quot;/&quot; &amp; TEXT(DAY(Confirmed_Training_End__c)) &amp; &quot;/&quot; &amp; TEXT(YEAR(Confirmed_Training_End__c)),
      TEXT(MONTH(Proposed_Training_Start__c)) &amp; &quot;/&quot; &amp; TEXT(DAY(Proposed_Training_Start__c)) &amp; &quot;/&quot; &amp; TEXT(YEAR(Proposed_Training_Start__c)) &amp; &quot; - &quot; &amp; TEXT(MONTH(Proposed_Training_End__c)) &amp; &quot;/&quot; &amp; TEXT(DAY(Proposed_Training_End__c)) &amp; &quot;/&quot; &amp; TEXT(YEAR(Proposed_Training_End__c))
   )
)</formula>
        <label>Merged Training Dates</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mileage_Information2__c</fullName>
        <label>Mileage Information</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multi_Feed__c</fullName>
        <description>Haystak</description>
        <label>Multi Feed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NCSM_Participation_Verification__c</fullName>
        <label>NCSM Participation Verification</label>
        <picklist>
            <picklistValues>
                <fullName>Userlist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Assignments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Data Import</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Processes/Templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desking Configuration/Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Form Mapping</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>No_Prospect_Data_Rec_d__c</fullName>
        <label>No Prospect Data Rec&apos;d</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Oh_Hold_Type__c</fullName>
        <description>Haystak field</description>
        <inlineHelpText>updated by onboarding rep</inlineHelpText>
        <label>On Hold Type</label>
        <picklist>
            <controllingField>Stage_Type__c</controllingField>
            <picklistValues>
                <fullName>SEO Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kore 360</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back To Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated To PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalate to Pro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on Dev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on PM Calls</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OppId18__c</fullName>
        <formula>CASESAFEID(Opportunity__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OppId18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Grouping_Category__c</fullName>
        <formula>Opportunity__r.Grouping__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that reads the grouping field</inlineHelpText>
        <label>Opp Grouping Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Legacy_Id__c</fullName>
        <formula>Legacy_ID__c</formula>
        <label>Opp Legacy Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Paid_Date__c</fullName>
        <formula>Opportunity__r.Paid_Date__c</formula>
        <label>Opp Paid Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opp_Recurring_Discount_Percent__c</fullName>
        <formula>Opportunity__r.Reoccurring_Discount_Percent__c</formula>
        <label>Opp Recurring Discount Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <inlineHelpText>formula field that reads the related opp close date for reporting</inlineHelpText>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Mobile_URL_s__c</fullName>
        <formula>Opportunity__r.Mobile_Website__c  &amp;BR()&amp; Opportunity__r.Mobile_Website_2__c &amp;BR()&amp; Opportunity__r.Mobile_Website_3__c</formula>
        <inlineHelpText>formula field that reads the mobile website url&apos;s from the opportunity and displays them in the project</inlineHelpText>
        <label>Opportunity Mobile URL&apos;s</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Sale_Type__c</fullName>
        <formula>TEXT(Opportunity__r.Sale_Type__c)</formula>
        <inlineHelpText>Formula field that reads the Sale Type from the Opportunity.</inlineHelpText>
        <label>Opportunity Sale Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Website_URL_s__c</fullName>
        <formula>Opportunity__r.Website__c &amp;BR()&amp; Opportunity__r.Website_2__c &amp;BR()&amp; Opportunity__r.Website_3__c</formula>
        <inlineHelpText>formula field that reads the 3 website urls from the opportunity and adds them to the proejct</inlineHelpText>
        <label>Opportunity Website URL&apos;s</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>